fixes 1.8